--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 mx-auto">
-        <h2 class="section-heading">Our vision is to uplift and strengthen families to help them reach their full potential.</h2>
+        <h2 class="section-heading">
+          Our vision is to uplift and strengthen parents, guardians, and individuals to help them reach their full potential.
+        </h2>
         <p>Contact Us to get started!</p>
       </div>
     </div>
