--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
 <section class="cta bg-img-smart-goals-group">
   <div class="cta-content">
     <div class="container">
-      <h2>Stop waiting.<br>Start Getting Involved.</h2>
+      <h2><br><br><br>Stop waiting.<br>Start Getting Involved.</h2>
       <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
     </div>
   </div>
