--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 </head>
-<body>
+<body id="page-top">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <!--
